successfully fix mouse event issues on firefox

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -2,9 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-svg text {
-	alignment-baseline: middle;
-	dominant-baseline: middle;
-	text-anchor: middle;
+foreignObject {
+	pointer-events: none;
+}
+
+foreignObject .title-container {
+	text-align: center;
+	display: table;
+	width: 120px;
+	height: 70px;
+}
+
+foreignObject .title-container .title {
+	display: table-cell;
+	vertical-align: middle;
 	font-size: 20px;
+	text-overflow:ellipsis;
+	max-width: 120px;
+	max-height: 70px;
+	overflow: hidden;
+	line-height: 1.5em;
 }
